# rpa

./: .gitignore  Dockerfile  README.md  agent.py  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
actions/: actions.py  tools.py
autogui/: .env.example  requirements.txt
src/browser_automation/: agent.py  main.py  pyproject.toml
